Horizontal alignment correctly on large view

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,7 +18,7 @@
 }
 
 .col-logo {
-  padding-left: 2%;
+  padding-left: 0%;
   align-items: left;
   height: 31vh;
 }
@@ -34,7 +34,7 @@
 
 .sitemap-link {
   display: inline-block;
-  padding-left: 1.4vw;
+  padding-left: 0.65vw;
   padding-top: 12px;
   text-decoration: none;
   color: rgb(250, 250, 250);
@@ -46,7 +46,7 @@
   text-decoration: none;
   color: rgb(250, 250, 250);
   font-size: 15px;
-  padding-right: 1vw;
+  padding-right: 0.4vw;
 }
 
 
@@ -63,7 +63,6 @@
 }
 
 .goback-button {
-  padding-left: 20vw;
   padding-top: 10px;
   height: 20vh;
 }
@@ -73,7 +72,7 @@
 }
 
 .row-socialMedia{
-  padding-left: 6vw;
+  padding-left: 0vw;
   height: 6vh;
   padding-top: 0.3vh;
   margin-left: auto;
@@ -82,18 +81,19 @@
 
 .mark-text {
   /* display: inline-block; */
-  font-size: 1.3vw;
+  font-size: 15px;
   width: 100%;
   text-align: right;
+  padding-right: calc(0.5vw + 5px);
 }
 
 @media (max-width: 1170px) {
   .row-socialMedia{
-    padding-left: 3vw;
+    padding-left: 0.5vw;
   }
 
   .goback-button {
-    padding-left: 18vw;
+    padding-left: 12vw;
   }
 }
 
@@ -171,7 +171,6 @@
     font-size: 2vh;
     padding-right: 3vw;
     padding-top: 1vh;
-    color: #555652;
   }
 
   .icon-link {
